# ws_watcher

./: .gitignore  README.md  example.ws_watcher_conf.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
manage/: build.sh  pip_freeze.sh
ws_livereload/: ws_livereload.py
ws_watcher/: ws_watcher.py
