[metadata]
name = ws_livereload
version = 0.2
author = Sergei Minaev
author_email = i@zenux.ru
description = Minimalistic websocket live-reload server for web-devs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SergeiMinaev/ws_livereload
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = ws_livereload
python_requires = >=3.8
